@@ -57,7 +57,7 @@
 \alias{lgamma,dMatrix-method}
 %
 \alias{zapsmall,dMatrix-method}
-%\alias{which,lMatrix-method}
+\alias{which,lMatrix-method}
 %
 %\alias{solve,...} --> solve-methods.Rd
 \description{
@@ -112,7 +112,9 @@
       subclasses of \code{"lMatrix"}: as the \pkg{base} function
       \code{\link{which}(x, arr.ind)} returns the indices of the
       \code{\link{TRUE}} entries in \code{x}; if \code{arr.ind} is true,
-      as a 2-column matrix of row and column indices.}
+      as a 2-column matrix of row and column indices. Since \pkg{Matrix}
+      version 1.2-9, if \code{useNames} is true, as by default, with
+      \code{\link{dimnames}}, the same as \code{base::which}.}
   }
 }
 %\references{}
